# chowder_weak_supervised

./: .gitignore  Chowder_data.ipynb  Dockerfile  README.md  app.sh  docker-compose.yml  pyproject.toml  test_predictions.csv
chowder_weak_supervised/: __init__.py  logger.py
chowder_weak_supervised/dataset/: __init__.py  tiles.py
chowder_weak_supervised/evaluation/: __init__.py  metrics.py
chowder_weak_supervised/lightning/: __init__.py  chowder_module.py  data_module.py  experiment.py  experiment_bis.py
chowder_weak_supervised/loss/: __init__.py  chowder_loss.py
chowder_weak_supervised/model/: __init__.py  chowder.py
data/: test_predictions.csv
data/experiment/tmp/: chowder_weights.pth
data/saved_model/CHOWDER/lightning_logs/version_0/: events.out.tfevents.1679845990.ip-172-31-40-51.91158.0  events.out.tfevents.1679846286.ip-172-31-40-51.91158.1  events.out.tfevents.1679846294.ip-172-31-40-51.91158.2
data/saved_model/CHOWDER/lightning_logs/version_1/: events.out.tfevents.1679846359.ip-172-31-40-51.99370.0  events.out.tfevents.1679846660.ip-172-31-40-51.99370.1  events.out.tfevents.1679846668.ip-172-31-40-51.99370.2
data/saved_model/CHOWDER/lightning_logs/version_2/: events.out.tfevents.1679846759.ip-172-31-40-51.106467.0  (+2 more)
test_chowder_weak_supervised/test_dataset/: test_dataset.py
test_chowder_weak_supervised/test_dataset/assets/: sample.csv
test_chowder_weak_supervised/test_experiment/: test_experiment.py
test_chowder_weak_supervised/test_loss/: test_loss.py
test_chowder_weak_supervised/test_model/: test_model.py
(+7 files in other folders)
