[tool.poetry]
name = "chowder_weak_supervised"
version = "0.0.1"
description = ""
authors = ["Wassim Abida <wassim.abida14@gmail.com>"]

[[tool.poetry.source]]
name = "public"
url = "https://pypi.org/simple/"

[tool.poetry.dependencies]
python = ">=3.9"
jsonpath-ng = "^1.4.3"
requests = "^2.28.1"
fire = "^0.4.0"
pandas = "1.4.4"
scikit-learn = "^1.2.2"
scipy = "^1.10.1"
matplotlib = "^3.7.1"
torch = "2.1.0"
lightning = "^2.5.1"


[tool.poetry.group.dev.dependencies]
pytest = "^7.1.3"
jupyterlab = "^3.5.2"
black = "^25.1.0"
mypy = "^1.15.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
